feat:made class and modify result page
Co-authored-by: S-Kanechi <s-kanechi@users.noreply.github.com>
Co-authored-by: BR-hir <br-hir@users.noreply.github.com>

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,14 @@
 body {
-  background-color: aquamarine;
+  background-color: #92c9ff;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+a {
+  font-size: 30px;
+}
+
+img {
+  width: 60%;
 }
